Nav Bar bug fix (#8)
* Squashed some bugs

* Changed input-list li width from 50 to 90

* Changed input-list li width from 50 to 90

* Update hangman.php

* Nav bar bug fix

--- a/css/mainStylesheet.css
+++ b/css/mainStylesheet.css
@@ -1,4 +1,5 @@
 body {
+  font: 1em sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
